# graphicRenderEngine

./: .buildinfo  .clang-format  .gitmodules  .readthedocs.yaml  APIDocumentation.html  CMakeLists.txt  LICENSE  README.html  README.md  README.zh-CN.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.github/workflows/: release.yml
_sources/: README.md.txt  index.rst.txt
_sources/ceres/core/: light.rst.txt  material.rst.txt  mesh.rst.txt
_sources/ceres/utils/: logger.rst.txt
_sources/tools/: tools.rst.txt
api/ceres/core/: index.html  inspector.html  light.html  modelImporter.html  particleEmitter.html  resource.html  uniformSet.html  worldLights.html
api/ceres/utils/: commonMacro.html  (+4 more)
ceres/: CMakeLists.txt
ceres/backend/handle/: context.cpp  context.h
ceres/backend/opengl/: contextGL.cpp  contextGL.h
ceres/core/: camera.cpp  camera.h  camera.html  color.cpp  color.h  color.html  framebuffer.cpp  framebuffer.h  framebuffer.html  glfwRenderer.cpp  glfwRenderer.h  glfwRenderer.html  index.html  inspector.cpp  inspector.h  inspector.html  light.cpp  light.h  light.html  material.cpp  material.h  material.html  mesh.cpp  mesh.h  mesh.html  modelImporter.cpp  modelImporter.h  modelImporter.html  particleEmitter.cpp  particleEmitter.h  ray.h  ray.html  renderPass.cpp  renderPass.h  renderPass.html  renderStats.h  renderStats.html  renderer.cpp  renderer.h  renderer.html  (+26 more)
ceres/embeddedResource/: blit_vert.glsl  debug_normal_frag.glsl  debug_tangent_vert.glsl  debug_uv_vert.glsl  particles_frag.glsl  particles_vert.glsl  shadow_incl.glsl  texture_vert.glsl  unlit_vert.glsl  utils_incl.glsl
ceres/shaders/: blit_frag.glsl  light_incl.glsl  shadow_frag.glsl  skybox_frag.glsl  skybox_vert.glsl  sprite_frag.glsl  sprite_vert.glsl  standard_blinn_phong_frag.glsl  standard_pbr_frag.glsl  uniforms_incl.glsl
ceres/shaders/bumpMapping/: blinn_bump_mapping_frag.glsl  blinn_bump_mapping_vert.glsl  displacement_mapping_frag.glsl  displacement_mapping_vert.glsl  normal_mapping_frag.glsl  normal_mapping_vert.glsl  parallax_mapping_frag.glsl  parallax_mapping_frag的.glsl  parallax_mapping_vert.glsl  relief_mapping_frag.glsl
ceres/shaders/cubeMapping/: reflection_frag.glsl  reflection_vert.glsl  refraction_frag.glsl  refraction_vert.glsl
ceres/tools/: generate-header.sh
ceres/utils/: commonMacro.h  funcHook.cpp  funcHook.h  glCommonDefine.html  guiCommonDefine.h  guiCommonDefine.html  index.html  logger.h  logger.html  luaCommonDefine.h  singleton.html  timer.html  utils.h  utils.html
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/doxgen/: Doxyfile
docs/doxygen/: Doxyfile.in
docs/doxygen2/: Doxyfile
docs/sphinx/: .buildinfo  conf.py  genSphinxDocs.sh  generateRstFile.sh  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
documents/: anti-aliasing.md  bump-mapping.md  cube-map.md  transparent-rendering.md
examples/: REAEME.html  examples.html
internals/: internals.html
notes/: anti-aliasing.md  deferred-render.md  pbr.md  rendering-optimization.md
overview/: REAEME.html  overview.html
re/: CMakeLists.txt
re/core/: Inspector.cpp  Inspector.h  camera.cpp  camera.h  color.cpp  color.h  embeddedTextures.inl  font.inl  framebuffer.cpp  framebuffer.h  glfwRenderer.cpp  glfwRenderer.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  modelImporter.cpp  modelImporter.h  particleMesh.cpp  particleMesh.h  profiler.cpp  profiler.h  ray.h  renderPass.cpp  renderPass.h  renderStats.cpp  renderStats.h  renderer.cpp  renderer.h  resource.cpp  resource.h  shader.cpp  shader.h  shaderSource.inl  skybox.cpp  skybox.h  sprite.cpp  sprite.h  (+12 more)
re/embeddedDeps/: blit_vert.glsl  debug_normal_frag.glsl  debug_normal_vert.glsl  debug_tangent_frag.glsl  debug_tangent_vert.glsl  debug_uv_frag.glsl  debug_uv_vert.glsl  light_incl.glsl  light_phong_incl.glsl  normalmap_incl.glsl  particles_frag.glsl  particles_vert.glsl  skybox_frag.glsl  skybox_proc_frag.glsl  skybox_proc_vert.glsl  skybox_vert.glsl  sprite_frag.glsl  sprite_vert.glsl  standard_blinn_phong_frag.glsl  standard_blinn_phong_vert.glsl  standard_frag.glsl  standard_pbr_frag.glsl  standard_pbr_vert.glsl  standard_phong_frag.glsl  standard_phong_vert.glsl  standard_vert.glsl  texture_vert.glsl  uniforms_incl.glsl  unlit_vert.glsl
re/embeddedResource/: blit_vert.glsl  debug_normal_frag.glsl  debug_normal_vert.glsl  debug_tangent_frag.glsl  debug_tangent_vert.glsl  debug_uv_frag.glsl  debug_uv_vert.glsl  light_incl.glsl  normalmap_incl.glsl  particles_frag.glsl  particles_vert.glsl  shadow_incl.glsl  shadow_vert.glsl  skybox_vert.glsl  sprite_frag.glsl  sprite_vert.glsl  standard_blinn_phong_vert.glsl  standard_pbr_frag.glsl  standard_pbr_vert.glsl  standard_phong_frag.glsl  standard_phong_vert.glsl  texture_frag.glsl  texture_vert.glsl  uniforms_incl.glsl  unlit_frag.glsl  unlit_vert.glsl
re/helper/: debug.cpp  debug.h
re/utils/: commonMacro.h  glCommonDefine.h  guiCommonDefine.h  logger.h  luaCommonDefine.h  singleton.h  timer.h  utils.h
src/: main.cpp
test/: ambientMapTest.cpp  basicProject.h  benchmark64kTest.cpp  box2dTest.cpp  bumpMapTest.cpp  clothSimulationTest.cpp  color.cpp  commonHandle.cpp  commonHandle.h  commonInterface.cpp  commonInterface.h  cubeMapTest.cpp  cubeTest.cpp  cubeTexTest.cpp  customMeshLayoutDefaultInt.cpp  customMeshLayoutDefaultValues.cpp  customMeshLayoutTest.cpp  deferredShadingTest.cpp  drawLineTest.cpp  effectManager.cpp  effectManager.h  engineTestSimple.h  gammaTest.cpp  guiTest.cpp  iblTest.cpp  luaForMathematicalFuncTest.cpp  luaScriptTest.cpp  main.cpp  matrixUniformTest.cpp  multiCameraTest.cpp  multiLightTest.cpp  multiMaterialTest.cpp  normalMapTest.cpp  objTest.cpp  particleSystemTest.cpp  particleTest.cpp  pbrMaterialSelectTestTest.cpp  pbrMetallicRoughness.cpp  pbrSpecularGlossiness.cpp  pbrTest.cpp  (+22 more)
test/resources/: planetCute.json
tools/: REAEME.html
utils/: commonMacro.h  git-pre-commit.sh  logger.cpp  logger.h  timer.h
(+10805 files in other folders)
